@@ -15,7 +15,7 @@ VERSION_TYPE = "dev"
 VERSION_NAME = "snapshot dev 5"
 
 DEVELOPING_FOR = "20w29a"
-DEVELOPMENT_COUNTER = 1
+DEVELOPMENT_COUNTER = 2
 
 # list of all versions since 19w52a to indicate order of release; used in save files todo: export to other file
 VERSION_ORDER = ["19w52a", "20w05a", "20w07a", "20w09a", "20w10a", "20w11a", "20w12a", "20w12b", "20w14a",
